syntax = "proto3";

package test;

service TestController {
  rpc UnaryAccumulate(ReqAccumulate) returns (ResAccumulate);
  rpc ClientStreamAccumulate(stream ReqAccumulate) returns (ResAccumulate);
  // rpc ServerStreamAccumulate(ReqAccumulate) returns (stream ResAccumulate);
  rpc DuplexStreamAccumulate(stream ReqAccumulate) returns (stream ResAccumulate);
  rpc ClientStreamObservableAccumulate(stream ReqAccumulate) returns (ResAccumulate);
  rpc ServerStreamObservableAccumulate(ReqAccumulate) returns (stream ResAccumulate);
  rpc DuplexStreamObservableAccumulate(stream ReqAccumulate) returns (stream ResAccumulate);
}

message ReqAccumulate {
  repeated double data = 1;
}
message ResAccumulate {
  double sum = 1;
}
